fixing border-radius remarks and containers gap bug

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -2,7 +2,7 @@
 $color-white: #ffffff;
 $color-light-gray: #7A88A4;
 $color-dark-blue: #313f59;
-$color-signal-blue:rgba(43, 70, 129, 0.9);
+$color-signal-blue:rgba(43, 70, 129, .9);
 $color-signal-blue-translucent:rgba(27, 49, 97, .9);
 $color-kraiola-blue:#3E73F9;
 $color-dark-gray:#363637;
