--- a/src/components/modules/searchForm/SearchForm.scss
+++ b/src/components/modules/searchForm/SearchForm.scss
@@ -25,7 +25,6 @@
 .tab-item {
   display:flex;
   justify-content: center;
-  align-items: center;
   width: 50%;
   padding: 11px 0;
 
@@ -37,13 +36,12 @@
   }
 
   .tab-icon {
-    width: 13px;
-    height: 13px;
+    width: 14px;
+    height: 15px;
     margin-right: 8px;
   }
-
   .tab-text {
-    font-size: 15px;
+    font-size: $medium;
     font-weight: 500;
     line-height: 20px;
   }
@@ -84,7 +82,9 @@
 
 .form-wrapper {
   padding: 22px 20px 36px;
-  background: $color-signal-blue;
+  border-radius: 0 0 4px 4px;
+ 
+  background-color: $color-signal-blue;
 }
 
 .form-controls-wrapper {
@@ -98,7 +98,10 @@
   height: 48px;
   border: none;
   margin-top: 2px;
+  font-size: $small;
+  line-height: 19px;
 
+  
   &:first-child {
     margin-top: 0;
   }
@@ -110,10 +113,6 @@
 
   padding: 12px 15px;
   border: none;
-  border-radius: 0;
-
-  font-size: $small;
-  line-height: 19px;
 
   color: $color-dark-gray;
 
@@ -172,7 +171,7 @@
   border-radius: 4px;
   margin-top: 2px;
 
-  font-size: $small;
+  font-size: 14px;
   font-weight: 600;
   letter-spacing: 0.1px;
   line-height: 16px;
@@ -184,22 +183,28 @@
 
 @include tablet {
   .search-form-wrapper {
-    margin-top: 120px;
+    margin-top: 78px;
   }
   .service-tabs-wrapper {
     display: flex;
     justify-content: flex-start;
-    border-radius: 4px 4px 0 0;
+    border-radius: 0;
   }
+
   .tab-item {
     width: 238px;
     min-width: 168px;
+  }
+  
+  .form-wrapper {
+    border-radius: 0;
   }
 
   .form-controls-wrapper {
     display: flex;
     flex-wrap: wrap;
   }
+
   .input-wrapper {
     margin: 0 auto;
     margin-top: 2px;
@@ -216,8 +221,9 @@
 }
 
 @include desktop {
+  
   .search-form-wrapper {
-    margin-top: 170px;
+    margin-top: 128px;
   }
 
   .search-form {
@@ -250,35 +256,19 @@
 
 @include large-desktop {
   .search-form-wrapper {
-    margin-top: 180px;
-  }
-
-  .search-form-wrapper {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-top: 180px;
   }
-  
   .form-wrapper {
     width: 100%;
     border-radius: 0 4px 4px 4px;
   }
   .service-tabs-wrapper {
-    display: flex;
-    justify-content: flex-start;
     border-radius: 4px 4px 0 0;
   }
-  .tab-item {
-    width: 238px;
-    min-width: 168px;
-  }
-
-  .trip-options {
-    .options-text {
-      text-transform: capitalize;
-    }
-  }
-  
+ 
   .form-controls-wrapper {
     border-radius: 4px;
   }
